syntax = "proto3";

package session;

option go_package = "github.com/hobbyfarm/gargantua/v3/protos/session";

import "general/general.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service SessionSvc {
    rpc CreateSession (CreateSessionRequest) returns (google.protobuf.Empty);
    rpc GetSession (general.GetRequest) returns (Session);
    rpc UpdateSession (UpdateSessionRequest) returns (google.protobuf.Empty);
    rpc UpdateSessionStatus (UpdateSessionStatusRequest) returns (google.protobuf.Empty);
    rpc DeleteSession (general.ResourceId) returns (google.protobuf.Empty);
    rpc DeleteCollectionSession (general.ListOptions) returns (google.protobuf.Empty);
    rpc ListSession (general.ListOptions) returns (ListSessionsResponse);
}

message Session {
    string id = 1;
    string scenario = 2;
    string course = 3;
    bool keep_course_vm = 4;
    string user = 5;
    repeated string vm_claim = 6;
    string access_code = 7;
    map<string, string> labels = 8;
    SessionStatus status = 9;
}

message CreateSessionRequest {
    string scenario = 1;
    string course = 2;
    bool keep_course_vm = 3;
    string user = 4;
    repeated string vm_claim = 5;
    string access_code = 6;
    map<string, string> labels = 7;
}

// Currently sessions are bound to a course, user and access code
// Thus, only the scenario for a session can be updated
message UpdateSessionRequest {
    string id = 1;
    string scenario = 2;
}

message UpdateSessionStatusRequest {
    string id = 1;
    google.protobuf.BoolValue paused = 2;
    google.protobuf.StringValue paused_time = 3;
    google.protobuf.BoolValue active = 4;
    google.protobuf.BoolValue finished = 5;
    string start_time = 6;
    string expiration_time = 7;
}

message SessionStatus {
    bool paused = 1;
    string paused_time = 2;
    bool active = 3;
    bool finished = 4;
    string start_time = 5;
    string expiration_time = 6;
}

message ListSessionsResponse {
    repeated Session sessions = 1;
}